--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
   <head>
     <script src="js/jquery-1.12.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>The Pig Latinator</title>
   </head>
-  <body>
-    <div class="">
-      <h1></h1>
+<body>
+  <div class="container">
+    <h1>The Pig Latinator</h1>
 
-      
+    <form>
+      <div>
+        <label for="wordform">Enter your word below to change it to Pig Latin:</label>
+        <p><input id="word" type="text"></p>
+      </div>
+
+        <button type="submit" class="btn">Find out!</button>
+    </form>
+
+    <div id="result">
+      <p>Your resulting word is<span class="result"></span>.</p>
+    </div>
+
+
 
 </body>
 </html>
