--- a/spec/spec-runner.html
+++ b/spec/spec-runner.html
@@ -1,5 +1,4 @@
 <div class="filename">spec/spec-runner.html</div>
-'''html
 <html>
 <head>
   <title>Mocha spec runner</title>
@@ -7,12 +6,12 @@
 </head>
 <body>
   <div id="mocha"></div>
-  <script src="jquery-1.12.0.js"></script>
-  <script src="spec-runner.js"></script>
+  <script src="../js/jquery-1.12.0.js"></script>
+  <script src="../js/scripts.js"></script>
   <script src="mocha.js"></script>
   <script src="chai.js"></script>
   <script>mocha.setup('bdd');</script>
-  <script src="spec.js"></script>
+  <script src="specs.js"></script>
   <script>
     expect = chai.expect;
     mocha.checkLeaks();
